# psprint

./: .gitignore  .psprintrc  README.md  README.org  README.rst  setup.cfg  setup.py  usage.py
docs/: conf.py  configuration.rst  index.rst  usage.rst
psprint/: __init__.py  __main__.py  classes.py  mark_types.py  printer.py  text_types.py
tests/: .coveragerc  test_fmt.py  test_print.py
