[metadata]
name = psprint
version = 21.1.14
description = psprint - Prompt String Print
author = Pradyumna Paranjape
author_email = pradyparanjpe@rediffmail.com
url = https://github.com/pradyparanjpe/psprint
license = LGPLv3
platforms =
    linux

[options]
packages = find:
scripts =
install_requires = colorama
include_package_data = True
python_requires =
    >=3.7

# [options.entry_points]
# console_scripts =
#     main =
